# she-llm-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
shz_llm_client/: __init__.py  anthropic_bedrock_client.py  base_client.py  factory.py  google_client.py  openai_client.py  perplexity_client.py  schemas.py  vision.py
tests/: test_anthropic_bedrock_client.py  test_google_client.py  test_openai_client.py  test_perplexity_client.py
